apps/base/airflow/virtual-service.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: airflow-virtualservice
  namespace: airflow
spec:
  gateways:
    - istio-ingress/wildcard-gateway
  hosts:
    - airflow.${cluster_subdomain}
  http:
    - route:
        - destination:
            host: airflow-webserver.airflow.svc.cluster.local
            port:
              number: 8080
